# FLORA

./: .gitignore  LICENSE  README.md  environment.yml  hatch_build.py  mkdocs.yml  pyproject.toml
backlog/: backlog.md
data/raw/: manifest.tsv  metadata.tsv
docs/: article.md  datasets.md  index.md  installation.md  methods.md  quickstart.md  report.md  ui.md  ui_agent_prompt.md  user_guide.md
examples/: basic_pipeline.py
scripts/: build_frontend.sh
src/flora/: __init__.py
src/flora/config/: __init__.py  settings.py
src/flora/core/: __init__.py  exceptions.py  logging.py
src/flora/db/: __init__.py  connection.py  ingestion.py  schema.py
src/flora/diversity/: __init__.py  alpha.py  beta.py
src/flora/feature_engineering/: __init__.py  encoding.py  normalization.py  reduction.py  selection.py
src/flora/front/: README.md  __init__.py  angular.json  eslint.config.js  metadata.json  package.json
src/flora/io/: __init__.py  downloaders.py  validators.py
src/flora/ml/: __init__.py
src/flora/ml/classification/: classifier.py
src/flora/ml/clustering/: clusterer.py
src/flora/ml/evaluation/: bias.py  metrics.py
src/flora/ml/explainability/: shap_analysis.py
src/flora/ml/optimization/: tuner.py
src/flora/ml/regression/: regressor.py
src/flora/pipelines/: __init__.py  main_pipeline.py
src/flora/reports/: __init__.py  html_report.py
src/flora/ui/: __init__.py  cli.py  server.py
src/flora/utils/: inspect_db.py
src/flora/viz/: __init__.py  diversity_plots.py  ml_plots.py  taxonomy_plots.py
tests/: conftest.py
tests/integration/: test_db_pipeline.py  test_full_pipeline.py
tests/unit/: test_catalog.py  test_config.py  test_diversity.py  test_download_cli.py  test_downloaders.py  test_exceptions.py  test_normalization.py  test_validators.py
