[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flora-bio"
version = "0.1.0"
description = "FLORA: Feature Learning and Omics Research Analytics — microbiome pipeline library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "FLORA Contributors" }]
requires-python = ">=3.11"
keywords = ["microbiome", "16S", "metagenomics", "bioinformatics", "machine-learning", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "optuna>=3.5.0",
    "mlflow>=2.10.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "scipy>=1.11.0",
    "umap-learn>=0.5.5",
]

[project.optional-dependencies]
hdbscan = ["hdbscan>=0.8.33"]
imbalanced = ["imbalanced-learn>=0.11.0"]
qiime2 = ["qiime2"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/flora-bio/flora"
Documentation = "https://flora-bio.readthedocs.io"
Repository = "https://github.com/flora-bio/flora"
Issues = "https://github.com/flora-bio/flora/issues"

[project.scripts]
flora = "flora.ui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flora"]

[tool.hatch.build.targets.wheel.force-include]
"src/flora/front/__init__.py" = "flora/front/__init__.py"
"src/flora/front/dist" = "flora/front/dist"

[tool.hatch.build.targets.wheel.exclude]
"flora/front/angular.json" = true
"flora/front/package.json" = true
"flora/front/package-lock.json" = true
"flora/front/tsconfig*.json" = true
"flora/front/.postcssrc.json" = true
"flora/front/eslint.config.js" = true
"flora/front/metadata.json" = true
"flora/front/README.md" = true
"flora/front/.env.example" = true
"flora/front/.gitignore" = true
"flora/front/assets" = true
"flora/front/public" = true
"flora/front/src" = true
"flora/front/node_modules" = true
"flora/front/dist/app" = true

[tool.hatch.build.targets.sdist]
exclude = [
  "src/flora/front/src",
  "src/flora/front/node_modules",
  "src/flora/front/.angular",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=flora --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/flora"]
omit = ["tests/*", "examples/*", "notebooks/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
